--- a/server/appsettings.json
+++ b/server/appsettings.json
@@ -1,5 +1,5 @@
 {
-  "CONNECTION_STRING": "server=SG-fixed-leader-6519-8104-mysql-master.servers.mongodirector.com;database=MyDatabase;user id=sgroot;password=diNLF5YJM+HS8QvY;",
+  "CONNECTION_STRING": "",
   "AUTH0_DOMAIN": "",
   "AUTH0_AUDIENCE": ""
 }
